<resources>
    <string name="app_name">Get a Job</string>
    <string name="login">login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign up</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="profile">profile</string>
    <string name="filter">filter</string>
    <string name="search">Search</string>
    <string name="hintSearchMess">Search Job....................</string>
    <string name="applied">Applied</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="your_post">your Post</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="or_sign_up_with">- Or sign up with -</string>
    <string name="enter_origination_name">Enter Origination name</string>
    <string name="pay_1000_2000">Pay 1000 – 2000</string>
    <string name="enter_total_posts">Enter Total Posts</string>
    <string name="enter_job_description">Enter Job Description</string>
    <string name="enter_skill">Enter Skill (,) comma-separated</string>
    <string name="enter_whatsapp_no">Enter Whatsapp No</string>
    <string name="enter_who_can_apply">Enter Who Can Apply</string>
    <string name="job_title">Enter Job Title</string>
    <string name="post_job">Post Job</string>
    <string name="post">Post Job</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="download_resume">View Resume</string>
    <string name="requestCode">505</string>
    <string name="log_out">Log out</string>
    <string name="skill_s_required">Skill(s) required</string>
    <string name="who_can_apply">Who Can Apply</string>
    <string name="send">Send</string>
    <string name="job_title_and_state">%1$s, 📍(%2$s, %3$s)</string>
    <string name="job_type_and_pay">%1$s, ₹%2$s/Month</string>
    <string name="job_total_applied">Total Applicant : %1$s</string>
    <string name="we_need_send_your_profile_data_to_the_organization_s_hr">We need send your profile data to the organization\'s HR</string>
    <string name="view_response">View Response</string>
    <string name="w">h</string>
    <string name="view_full_details">view Applicant</string>
    <string name="delete">Delete</string>
    <string name="error_massage">You Haven\'t applied any Job</string>
    <string name="reapply">Reapply</string>
    <string name="update">update</string>
    <string name="view_resume">View Resume</string>
    <string name="download">Download</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="passError">The password is invalid or the user does not have a password.</string>
    <string name="save_phone_number">Save Phone Number</string>
    <string name="save_you_phone_no">Save you phone No</string>
    <string name="no_applicant">No one applied yet.</string>
    <string name="close_pdfview">close pdfView</string>
    <string name="apply_now">Apply Now</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="nextStep">Next Step. You need to send message on Whatsapp.</string>
    <string name="nextStepReapply">if you want to reapply send message on whatsapp.</string>
    <string name="resume">Resume</string>
    <string name="job_details">Job Details</string>
    <string name="applicant">Applicant</string>
    <string name="no_data">No Data</string>


</resources>