<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_applied"
        android:title="@string/applied"
        android:icon="@drawable/ic_apply"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_job"
        android:title="@string/your_post"
        android:icon="@drawable/ic_job"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_Profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_circle"
        app:showAsAction="ifRoom" />

</menu>