<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center|top"
    android:minHeight="200dp">

    <TextView
        android:id="@+id/txtT"
        style="@style/textStyle_20sp_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:text="@string/save_you_phone_no" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextNewPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/enter_phone_no"
        android:inputType="phone"
        android:layout_below="@+id/txtT"/>


    <Button
        android:id="@+id/buttonUpdatePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNewPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/save_phone_number" />

</RelativeLayout>
