<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.holder.PostJobFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eTxtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/job_title"
                android:inputType="textPersonName"
                android:minHeight="49dp"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <EditText
                android:id="@+id/eTxtCyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/enter_origination_name"
                android:inputType="textPersonName"
                android:minHeight="49dp"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:minHeight="49dp" />

                <Spinner
                    android:id="@+id/dState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:minHeight="49dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/eTxtxCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/enter_city_name"
                android:inputType="text"
                android:minHeight="49dp"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/eTxtPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/pay_1000_2000"
                    android:inputType="date"
                    android:minHeight="49dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/material_dynamic_neutral80" />

                <EditText
                    android:id="@+id/eTxtTotalPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_total_posts"
                    android:inputType="number"
                    android:minHeight="49dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/material_dynamic_neutral80" />
            </LinearLayout>


            <EditText
                android:id="@+id/eTxtDisc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/enter_job_description"
                android:inputType="textMultiLine"
                android:minHeight="49dp"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <EditText
                android:id="@+id/eTxtSkill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/enter_skill"
                android:inputType="text"
                android:minHeight="49dp"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <EditText
                android:id="@+id/eTxtWCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/enter_who_can_apply"
                android:inputType="textMultiLine"
                android:minHeight="49dp"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80" />

            <EditText
                android:id="@+id/eTxtWhNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/enter_whatsapp_no"
                android:inputType="phone"
                android:minHeight="49dp" />

            <Button
                android:id="@+id/btnPostJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:padding="10dp"
                android:text="Post Job"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>