<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    style="@style/cardStyle">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyle_20sp_bold"
            android:text="@string/applied"
            android:id="@+id/txtTitleP"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyle_16sp"
            android:text="@string/applied"
            android:id="@+id/txtJobTypeP"
            android:layout_below="@id/txtTitleP"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyle_16sp"
            android:text="@string/applied"
            android:id="@+id/txtTotalP"
            android:layout_below="@id/txtJobTypeP"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/txtTotalP">
            <Button
                android:id="@+id/btnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_full_details" />
            <View
                android:layout_width="50dp"
                android:layout_height="0dp"/>
            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:minWidth="180dp"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>