<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                app:srcCompat="@drawable/arrow_back_solid" />


            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                app:srcCompat="@drawable/job_search" />

            <TextView
                android:id="@+id/txt"
                style="@style/textStyle_20sp_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgLogo"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textAllCaps="true" />

            <LinearLayout
                android:id="@+id/layoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardName"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#B572F8">

                    <EditText
                        android:id="@+id/eTxtNameUp"
                        style="@style/textStyle_20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:hint="@string/enter_full_name"
                        android:inputType="textEmailAddress"
                        android:minHeight="49dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPhNo"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#B572F8">

                    <EditText
                        android:id="@+id/eTxtPhNoUp"
                        style="@style/textStyle_20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:hint="@string/enter_phone_no"
                        android:inputType="phone"
                        android:minHeight="49dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardEmail"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#B572F8">

                    <EditText
                        android:id="@+id/eTxtEmailUp"
                        style="@style/textStyle_20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:minHeight="49dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPass"
                    style="@style/cardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#B572F8">

                    <EditText
                        android:id="@+id/eTxtPassUp"
                        style="@style/textStyle_20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:minHeight="49dp" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>